# b3alien

./: .gitignore  .readthedocs.yaml  .zenodo.json  Dockerfile  README.md  pyproject.toml  python-publish.yml
.github/workflows/: test.yml
b3alien/: b3cube.py  cube.py  gee.py  griis.py  io.py  utils.py  visualisation.py
b3alien/b3alien.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
b3alien/b3cube/: __init__.py  b3cube.py
b3alien/griis/: __init__.py  griis.py
b3alien/simulation/: __init__.py  simulation.py
b3alien/utils/: geo.py
b3alien/visualisation/: __init__.py  b3gee.py
docs/: acknowledgements.rst  api_cube.rst  api_griis.rst  api_simulation.rst  api_utils.rst  api_visualisation.rst  architecture.rst  conf.py  index.rst  introduction.rst  modules.rst  requirements.txt  usage.rst
tests/: requirements.txt  test_cube.py  test_griis.py
tests/data/costa-rica/297e30b7-5321-44eb-bb2c-26e1d538b4a3/: Distribution.tsv  Media.tsv  NameRelation.tsv  NameUsage.tsv  Reference.tsv  SpeciesEstimate.tsv  SpeciesInteraction.tsv  TaxonConceptRelation.tsv  TaxonProperty.tsv  TypeMaterial.tsv  VernacularName.tsv  metadata.yaml
tests/data/costa-rica/dwca-griis-costa-rica-v1.4/: distribution.txt  eml.xml  merged_distr.txt  merged_distr.txt.bck  meta.xml  speciesprofile.txt  taxon.txt
tests/data/sc_original/: NumDis.csv
tests/notebooks/: checklist_BE.ipynb  correlations.ipynb  create_figures.ipynb  exemplar_workflow.ipynb  integrated_workflow.ipynb
