[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3alien"
version = "0.0.1"
description = "Calculating the CBD target 6.1 indicator from occurrence cubes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Maarten Trekels", email = "maarten.trekels@plantentuinmeise.be"}]
dependencies = [
  "geopandas>=1.0.0",
  "xarray",
  "sparse",
  "shapely",
  "gcsfs"
]

[project.urls]
homepage = "https://www.plantentuinmeise.be"
repository = "https://github.com/mtrekels/b3alien"
documentation = "https://github.com/mtrekels/b3alien/docs"


[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]


